  * CID matching information is now shown when doing 'dialplan show'.
  * Added maxfiles option to options section of asterisk.conf which allows you to specify
     what Asterisk should set as the maximum number of open files when it loads.
  * Added the jittertargetextra configuration option.
  * Added G729 passthrough support to chan_phone for Sigma Designs boards.
  * Added the parkedcalltransfers option to features.conf
  * Added 's' option to Page application.
  * Added 'E' and 'V' commands to ExternalIVR.
  * Added 'DBDel' and 'DBDelTree' manager commands.
  * Added 'o' and 'X' options to Chanspy.
  * Added the parkedcallreparking option to features.conf
  * SMDI is now enabled in voicemail using the smdienable option.
  * Added zap show version CLI command to chan_zap.
  * Added a new CDR module, cdr_sqlite3_custom.
  * Added a new realtime configuration module, res_config_sqlite
  * Added a new dialplan application, Bridge, which allows you to bridge the
     calling channel to any other active channel on the system.
  * Added support for setting the CoS for VLAN traffic (802.1p).  See the sample
     configuration files for the IP channel drivers.  The new option is "cos".
     This information is also documented in doc/qos.tex, or the IP Quality of Service
     section of asterisk.pdf.
  * The built-in method for doing attended transfers has been updated to
     include some new options that allow you to have the transferee sent
     back to the person that did the transfer if the transfer is not successful.
     See the options "atxferdropcall", "atxferloopdelay", and "atxfercallbackretries"
     in features.conf.sample.
  * The device state functionality in the Local channel driver has been updated
     to indicate INUSE or NOT_INUSE when a Local channel is being used as opposed
     to just UNKNOWN if the extension exists.
  * Added support for the Hungarian language for saying numbers, dates, and times.